--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "chartist": "^1.3.0",
     "react": "^18.2.0",
+    "react-chartist": "^0.9.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.12.0",
     "react-rating-stars-component": "^2.2.0",
